feat: Implementación de servicio y restricciones en ROLES udistrital/sga_documentacion#421

--- a/src/app/components/asignacion-fechas/asignacion-fechas.component.html
+++ b/src/app/components/asignacion-fechas/asignacion-fechas.component.html
@@ -1,70 +1,89 @@
-<div class="asignacion-fechas" *ngIsGranted="[ROLES.ADMIN_SGA, ROLES.DOCENTE, ROLES.ESTUDIANTE, ROLES.CONSEJO_CURRICULAR]">
-  <h2>{{ "asignacion_fechas.titulo" | translate }}</h2>
-  <div class="nivel-formacion">
-    <label for="nivelFormacion">{{ "asignacion_fechas.seleccionar_nivel_formacion" | translate }}</label>
-    <select id="nivelFormacion" [(ngModel)]="nivelFormacion">
-      <option value="" disabled selected>{{ "asignacion_fechas.seleccionar" | translate }}</option>
-      <option value="pregrado">{{ "asignacion_fechas.pregrado" | translate }}</option>
-      <option value="postgrado">{{ "asignacion_fechas.postgrado" | translate }}</option>
-    </select>
-  </div>
-
-  <div class="procesos-grid">
-    <div class="fila-procesos">
-      <div class="proceso" *ngFor="let proceso of procesos.slice(0, 3)">
-        <h3>{{ proceso.nombre }}</h3>
-        <div class="fechas">
-          <mat-form-field appearance="fill">
-            <mat-label>{{ "asignacion_fechas.seleccionar_fecha_inicio" | translate }}</mat-label>
-            <input matInput [matDatepicker]="pickerInicio" [(ngModel)]="proceso.fechaInicio" (dateChange)="validarFechas(proceso)">
-            <mat-datepicker-toggle matSuffix [for]="pickerInicio"></mat-datepicker-toggle>
-            <mat-datepicker #pickerInicio></mat-datepicker>
-          </mat-form-field>
+<ng-container *ngIf="hasRole([ROLES.ADMIN_SGA, ROLES.DOCENTE, ROLES.ESTUDIANTE, ROLES.CONSEJO_CURRICULAR]); else noPermission">
+  <div class="asignacion-fechas">
+    <h2>{{ "asignacion_fechas.titulo" | translate }}</h2>
+    <div class="nivel-formacion">
+      <label for="nivelFormacion">{{ "asignacion_fechas.seleccionar_nivel_formacion" | translate }}</label>
+      <select id="nivelFormacion" [(ngModel)]="nivelFormacion">
+        <option value="" disabled selected>{{ "asignacion_fechas.seleccionar" | translate }}</option>
+        <option value="pregrado">{{ "asignacion_fechas.pregrado" | translate }}</option>
+        <option value="postgrado">{{ "asignacion_fechas.postgrado" | translate }}</option>
+      </select>
+    </div>
+  
+    <div class="procesos-grid">
+      <div class="fila-procesos">
+        <div class="proceso" *ngFor="let proceso of procesos.slice(0, 3)">
+          <h3>{{ proceso.nombre }}</h3>
+          <div class="fechas">
+            <mat-form-field appearance="fill">
+              <mat-label>{{ "asignacion_fechas.seleccionar_fecha_inicio" | translate }}</mat-label>
+              <input matInput [matDatepicker]="pickerInicio" [(ngModel)]="proceso.fechaInicio" (dateChange)="validarFechas(proceso)">
+              <mat-datepicker-toggle matSuffix [for]="pickerInicio"></mat-datepicker-toggle>
+              <mat-datepicker #pickerInicio></mat-datepicker>
+            </mat-form-field>
+          </div>
+          <div class="fechas">
+            <mat-form-field appearance="fill">
+              <mat-label>{{ "asignacion_fechas.seleccionar_fecha_fin" | translate }}</mat-label>
+              <input matInput [matDatepicker]="pickerFin" [(ngModel)]="proceso.fechaFin" [min]="proceso.fechaInicio" (dateChange)="validarFechas(proceso)">
+              <mat-datepicker-toggle matSuffix [for]="pickerFin"></mat-datepicker-toggle>
+              <mat-datepicker #pickerFin></mat-datepicker>
+            </mat-form-field>
+          </div>
+          <div class="selected-dates">
+            <p *ngIf="proceso.fechaInicio">{{ "asignacion_fechas.fecha_inicio_seleccionada" | translate }}: {{ proceso.fechaInicio | date: 'dd/MM/yyyy' }}</p>
+            <p *ngIf="proceso.fechaFin">{{ "asignacion_fechas.fecha_fin_seleccionada" | translate }}: {{ proceso.fechaFin | date: 'dd/MM/yyyy' }}</p>
+          </div>
         </div>
-        <div class="fechas">
-          <mat-form-field appearance="fill">
-            <mat-label>{{ "asignacion_fechas.seleccionar_fecha_fin" | translate }}</mat-label>
-            <input matInput [matDatepicker]="pickerFin" [(ngModel)]="proceso.fechaFin" [min]="proceso.fechaInicio" (dateChange)="validarFechas(proceso)">
-            <mat-datepicker-toggle matSuffix [for]="pickerFin"></mat-datepicker-toggle>
-            <mat-datepicker #pickerFin></mat-datepicker>
-          </mat-form-field>
-        </div>
-        <div class="selected-dates">
-          <p *ngIf="proceso.fechaInicio">{{ "asignacion_fechas.fecha_inicio_seleccionada" | translate }}: {{ proceso.fechaInicio | date: 'dd/MM/yyyy' }}</p>
-          <p *ngIf="proceso.fechaFin">{{ "asignacion_fechas.fecha_fin_seleccionada" | translate }}: {{ proceso.fechaFin | date: 'dd/MM/yyyy' }}</p>
+      </div>
+  
+      <div class="fila-procesos">
+        <div class="proceso" *ngFor="let proceso of procesos.slice(3)">
+          <h3>{{ proceso.nombre }}</h3>
+          <div class="fechas">
+            <mat-form-field appearance="fill">
+              <mat-label>{{ "asignacion_fechas.seleccionar_fecha_inicio" | translate }}</mat-label>
+              <input matInput [matDatepicker]="pickerInicio2" [(ngModel)]="proceso.fechaInicio" (dateChange)="validarFechas(proceso)">
+              <mat-datepicker-toggle matSuffix [for]="pickerInicio2"></mat-datepicker-toggle>
+              <mat-datepicker #pickerInicio2></mat-datepicker>
+            </mat-form-field>
+          </div>
+          <div class="fechas">
+            <mat-form-field appearance="fill">
+              <mat-label>{{ "asignacion_fechas.seleccionar_fecha_fin" | translate }}</mat-label>
+              <input matInput [matDatepicker]="pickerFin2" [(ngModel)]="proceso.fechaFin" [min]="proceso.fechaInicio" (dateChange)="validarFechas(proceso)">
+              <mat-datepicker-toggle matSuffix [for]="pickerFin2"></mat-datepicker-toggle>
+              <mat-datepicker #pickerFin2></mat-datepicker>
+            </mat-form-field>
+          </div>
+          <div class="selected-dates">
+            <p *ngIf="proceso.fechaInicio">{{ "asignacion_fechas.fecha_inicio_seleccionada" | translate }}: {{ proceso.fechaInicio | date: 'dd/MM/yyyy' }}</p>
+            <p *ngIf="proceso.fechaFin">{{ "asignacion_fechas.fecha_fin_seleccionada" | translate }}: {{ proceso.fechaFin | date: 'dd/MM/yyyy' }}</p>
+          </div>
         </div>
       </div>
     </div>
+  
+    <button class="guardar-btn" (click)="guardar()">
+      <mat-icon>archive</mat-icon>
+      {{ "asignacion_fechas.guardar" | translate }}
+    </button>
+  </div> 
+</ng-container>
 
-    <div class="fila-procesos">
-      <div class="proceso" *ngFor="let proceso of procesos.slice(3)">
-        <h3>{{ proceso.nombre }}</h3>
-        <div class="fechas">
-          <mat-form-field appearance="fill">
-            <mat-label>{{ "asignacion_fechas.seleccionar_fecha_inicio" | translate }}</mat-label>
-            <input matInput [matDatepicker]="pickerInicio2" [(ngModel)]="proceso.fechaInicio" (dateChange)="validarFechas(proceso)">
-            <mat-datepicker-toggle matSuffix [for]="pickerInicio2"></mat-datepicker-toggle>
-            <mat-datepicker #pickerInicio2></mat-datepicker>
-          </mat-form-field>
-        </div>
-        <div class="fechas">
-          <mat-form-field appearance="fill">
-            <mat-label>{{ "asignacion_fechas.seleccionar_fecha_fin" | translate }}</mat-label>
-            <input matInput [matDatepicker]="pickerFin2" [(ngModel)]="proceso.fechaFin" [min]="proceso.fechaInicio" (dateChange)="validarFechas(proceso)">
-            <mat-datepicker-toggle matSuffix [for]="pickerFin2"></mat-datepicker-toggle>
-            <mat-datepicker #pickerFin2></mat-datepicker>
-          </mat-form-field>
-        </div>
-        <div class="selected-dates">
-          <p *ngIf="proceso.fechaInicio">{{ "asignacion_fechas.fecha_inicio_seleccionada" | translate }}: {{ proceso.fechaInicio | date: 'dd/MM/yyyy' }}</p>
-          <p *ngIf="proceso.fechaFin">{{ "asignacion_fechas.fecha_fin_seleccionada" | translate }}: {{ proceso.fechaFin | date: 'dd/MM/yyyy' }}</p>
-        </div>
+<!-- Modal para mostrar cuando el usuario no tiene permisos -->
+<ng-template #noPermission>
+  <div class="modal-overlay" *ngIf="!hasRole([ROLES.ADMIN_SGA, ROLES.DOCENTE, ROLES.ESTUDIANTE, ROLES.CONSEJO_CURRICULAR])">
+    <div class="modal-content">
+      <h2>{{ "definicion_formularios.sin_permisos_titulo" | translate }}</h2>
+      <p>{{ "definicion_formularios.sin_permisos_mensaje" | translate }}</p>
+      <!-- Icono grande de carita triste -->
+      <div class="sad-face-icon">
+        <mat-icon class="sad-icon">sentiment_dissatisfied</mat-icon>
       </div>
     </div>
   </div>
+</ng-template>
 
-  <button class="guardar-btn" (click)="guardar()">
-    <mat-icon>archive</mat-icon>
-    {{ "asignacion_fechas.guardar" | translate }}
-  </button>
-</div>
+
+
