--- a/src/app/components/evaluaciones/evaluaciones.component.html
+++ b/src/app/components/evaluaciones/evaluaciones.component.html
@@ -553,7 +553,7 @@
                     <!-- Mostrar directamente el componente dynamic-form -->
                     <ng-container *ngIf="showDynamicForm">
                         <ngx-dinamicform [normalform]="formData" (result)="handleFormResult($event)"></ngx-dinamicform>
-                    </ng-container>
+                    </ng-container>>
 
                     <div class="form-col1">
                         <button mat-flat-button color="accent" type="submit" [disabled]="autoevaluacionIForm.invalid">
