--- a/src/app/components/evaluaciones/evaluaciones.component.scss
+++ b/src/app/components/evaluaciones/evaluaciones.component.scss
@@ -46,12 +46,6 @@
   }
 }
 
-
-.evaluation-form {
-  display: flex;
-  flex-direction: column;
-}
-
 h2 {
   font-size: 1.5em;
   margin-bottom: 15px; /* Se ajustó para reducir el espacio */
@@ -182,3 +176,116 @@ input, select, textarea {
   border: 1px solid var(--md-primary-700);
   border-radius: 5px;
 }
+.evaluation-form {
+  display: flex;
+  flex-direction: column;
+
+  table {
+    border-collapse: collapse;
+    width: 100%;
+    margin-bottom: 20px;
+
+    th,
+    td {
+      border: 1px solid blue;
+      padding: 8px;
+      text-align: left;
+    }
+
+    textarea {
+      width: 100%;
+      border: none;
+      outline: none;
+      resize: none;
+      font-family: inherit;
+      font-size: inherit;
+    }
+  }
+}
+
+.evaluation-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 16px;
+
+  th,
+  td {
+    border: 1px solid #007bff;
+    padding: 8px;
+    text-align: left;
+  }
+
+  th {
+    background-color: #cce7ff;
+  }
+
+  td {
+    background-color: #f0f8ff;
+  }
+}
+
+.instruction-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 16px;
+
+  th,
+  td {
+    border: 1px solid #007bff;
+    padding: 8px;
+    text-align: left;
+  }
+
+  th {
+    background-color: #e0f7e0;
+  }
+
+  td {
+    background-color: #f9fff9;
+  }
+}
+
+.coevaluacion-form {
+  .form-table {
+    width: 100%;
+    border-collapse: collapse;
+
+    th, td {
+      border: 1px solid #0000ff;
+      padding: 10px;
+      text-align: left;
+    }
+
+    textarea {
+      width: 100%;
+      height: 100%;
+      border: none;
+      resize: none;
+    }
+
+    .upload-table {
+      width: 100%;
+      border-collapse: collapse;
+
+      td {
+        padding: 10px;
+        text-align: left;
+        vertical-align: middle;
+
+        &:last-child {
+          text-align: center;
+        }
+      }
+
+      mat-icon-button {
+        background-color: #007bff;
+        color: white;
+      }
+    }
+  }
+}
+
+.form-col1 {
+  margin-bottom: 20px;
+}
+
